# bluetooth-serial-port

./: CMakeLists.txt
src/: BTSerialPortBinding.h
src/linux/: BTSerialPortBinding.cc
src/windows/: BTSerialPortBinding.cc
test/: main.cpp
